--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.13",
+    "@angular/cdk": "^11.2.6",
     "@angular/common": "~9.1.13",
     "@angular/compiler": "~9.1.13",
     "@angular/core": "~9.1.13",
@@ -19,6 +20,7 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "angular-bootstrap-md": "^11.0.0",
     "bootstrap": "^4.6.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
